<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.obiba.mica</groupId>
  <artifactId>mica</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>1.0.0.RC4</version>
  </parent>

  <modules>
    <module>mica-core</module>
    <module>mica-rest</module>
    <module>mica-web-model</module>
    <module>mica-server</module>
    <module>mica-angularjs-client</module>
  </modules>

  <profiles>

    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <!-- Spring profile to use -->
        <spring.profiles.active>dev</spring.profiles.active>
        <!-- log configuration -->
        <logback.loglevel>DEBUG</logback.loglevel>
      </properties>
    </profile>

    <profile>
      <id>prod</id>
      <properties>
        <!-- Spring profile to use -->
        <spring.profiles.active>prod</spring.profiles.active>
        <!-- log configuration -->
        <logback.loglevel>INFO</logback.loglevel>
        <logback.appender>CONSOLE</logback.appender>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>com.github.trecloux</groupId>
            <artifactId>yeoman-maven-plugin</artifactId>
            <version>0.1</version>
            <configuration>
              <yeomanProjectDirectory>${project.basedir}</yeomanProjectDirectory>
            </configuration>
            <executions>
              <execution>
                <id>run-grunt</id>
                <phase>generate-resources</phase>
                <goals>
                  <goal>build</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>2.5</version>
            <configuration>
              <filesets>
                <fileset>
                  <directory>dist</directory>
                </fileset>
                <fileset>
                  <directory>.tmp</directory>
                </fileset>
                <fileset>
                  <directory>node_modules</directory>
                </fileset>
              </filesets>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <arguments>
                <argument>--spring.profiles.active=prod</argument>
              </arguments>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>

  <properties>

    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>1.8</java.version>

    <assertj-core.version>1.6.0</assertj-core.version>
    <awaitility.version>1.4.0</awaitility.version>
    <commons-io.version>2.4</commons-io.version>
    <commons-lang.version>2.6</commons-lang.version>
    <guava.version>16.0.1</guava.version>
    <geronimo-javamail_1.4_mail.version>1.8.3</geronimo-javamail_1.4_mail.version>
    <hikari-cp.version>1.3.3</hikari-cp.version>
    <javax.inject.version>1</javax.inject.version>
    <jhipsterloaded.version>0.2-SNAPSHOT</jhipsterloaded.version>
    <joda-time-hibernate.version>1.3</joda-time-hibernate.version>
    <json-path.version>0.9.1</json-path.version>
    <jsr305.version>2.0.3</jsr305.version>
    <metrics-spring.version>3.0.0-RC4</metrics-spring.version>
    <mongeez.version>0.9.4</mongeez.version>
    <protobuf.version>2.5.0</protobuf.version>
    <protobuf-java-format.version>1.2.1-obiba</protobuf-java-format.version>
    <springloaded.version>1.2.0.BUILD-20140214.165636-1</springloaded.version>
    <usertype.core.version>3.1.0.CR10</usertype.core.version>

    <maven-dependency-plugin.version>2.1</maven-dependency-plugin.version>
    <maven-enforcer-plugin.version>1.3.1</maven-enforcer-plugin.version>
    <maven-sonar-plugin.version>2.2</maven-sonar-plugin.version>

  </properties>

  <repositories>
    <repository>
      <id>obiba.org</id>
      <name>Obiba Maven 2.x Repository</name>
      <url>http://repo.obiba.org/repo</url>
      <releases>
        <enabled>true</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>obiba</id>
      <url>http://repo.obiba.org/repo</url>
    </pluginRepository>
  </pluginRepositories>

  <prerequisites>
    <maven>3.0.0</maven>
  </prerequisites>

  <dependencyManagement>
    <dependencies>

      <dependency>
        <groupId>com.codahale.metrics</groupId>
        <artifactId>metrics-ehcache</artifactId>
        <version>${codahale-metrics.version}</version>
      </dependency>
      <dependency>
        <groupId>com.codahale.metrics</groupId>
        <artifactId>metrics-jvm</artifactId>
        <version>${codahale-metrics.version}</version>
      </dependency>
      <dependency>
        <groupId>com.codahale.metrics</groupId>
        <artifactId>metrics-servlet</artifactId>
        <version>${codahale-metrics.version}</version>
      </dependency>
      <dependency>
        <groupId>com.codahale.metrics</groupId>
        <artifactId>metrics-servlets</artifactId>
        <exclusions>
          <exclusion>
            <groupId>com.codahale.metrics</groupId>
            <artifactId>metrics-healthchecks</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-json-org</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-hppc</artifactId>
        <version>${jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>com.ryantenney.metrics</groupId>
        <artifactId>metrics-spring</artifactId>
        <version>${metrics-spring.version}</version>
      </dependency>
      <dependency>
        <groupId>com.zaxxer</groupId>
        <artifactId>HikariCP</artifactId>
        <version>${hikari-cp.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.sun</groupId>
            <artifactId>tools</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>commons-lang</groupId>
        <artifactId>commons-lang</artifactId>
        <version>${commons-lang.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>${javax.inject.version}</version>
      </dependency>
      <dependency>
        <groupId>joda-time</groupId>
        <artifactId>joda-time-hibernate</artifactId>
        <version>${joda-time-hibernate.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.geronimo.javamail</groupId>
        <artifactId>geronimo-javamail_1.4_mail</artifactId>
        <version>${geronimo-javamail_1.4_mail.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-core</artifactId>
        <version>${hibernate-entitymanager.version}</version>
      </dependency>
      <dependency>
        <groupId>org.hibernate</groupId>
        <artifactId>hibernate-ehcache</artifactId>
        <version>${hibernate-entitymanager.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jadira.usertype</groupId>
        <artifactId>usertype.core</artifactId>
        <version>${usertype.core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.liquibase.ext</groupId>
        <artifactId>liquibase-hibernate4</artifactId>
        <version>3.3</version>
        <exclusions>
          <exclusion>
            <groupId>org.hibernate.javax.persistence</groupId>
            <artifactId>hibernate-jpa-2.0-api</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-autoconfigure</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-loader-tools</artifactId>
        <version>${spring-boot.version}</version>
      </dependency>

      <dependency>
        <groupId>io.github.jhipster.loaded</groupId>
        <artifactId>core</artifactId>
        <version>${jhipsterloaded.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>com.jayway.awaitility</groupId>
        <artifactId>awaitility</artifactId>
        <version>${awaitility.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>com.jayway.jsonpath</groupId>
        <artifactId>json-path</artifactId>
        <version>${json-path.version}</version>
        <scope>test</scope>
      </dependency>


      <dependency>
        <groupId>org.assertj</groupId>
        <artifactId>assertj-core</artifactId>
        <version>${assertj-core.version}</version>
        <scope>test</scope>
      </dependency>

      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>

      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${jsr305.version}</version>
        <scope>compile</scope>
      </dependency>

      <dependency>
        <groupId>org.mongeez</groupId>
        <artifactId>mongeez</artifactId>
        <version>${mongeez.version}</version>
      </dependency>


      <dependency>
        <groupId>com.google.protobuf</groupId>
        <artifactId>protobuf-java</artifactId>
        <version>${protobuf.version}</version>
      </dependency>

      <dependency>
        <groupId>com.googlecode.protobuf-java-format</groupId>
        <artifactId>protobuf-java-format</artifactId>
        <version>${protobuf-java-format.version}</version>
      </dependency>

    </dependencies>

  </dependencyManagement>

  <dependencies>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>

    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <scope>compile</scope>
    </dependency>

  </dependencies>

  <build>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${maven-enforcer-plugin.version}</version>
        <executions>
          <execution>
            <id>enforce-versions</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <message>You are running an older version of Maven. Mica requires at least Maven 3.0</message>
                  <version>[3.0.0,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <message>You are running an older version of Java. Mica requires at least JDK 1.7</message>
                  <version>[1.7.0,)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>-XX:MaxPermSize=128m -Xmx256m</argLine>
          <forkCount>1</forkCount>
          <reuseForks>false</reuseForks>
          <!-- Force alphabetical order to have a reproducible build -->
          <runOrder>alphabetical</runOrder>
          <classpathDependencyExcludes>
            <classpathDependencyExclude>org.springsource.loaded:springloaded</classpathDependencyExclude>
          </classpathDependencyExcludes>
        </configuration>
      </plugin>


      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>${maven-sonar-plugin.version}</version>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <arguments>
            <argument>--spring.profiles.active=dev</argument>
          </arguments>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>${maven-dependency-plugin.version}</version>
        <executions>
          <execution>
            <id>copy</id>
            <phase>process-resources</phase>
            <goals>
              <goal>copy</goal>
            </goals>
            <configuration>
              <artifactItems>
                <artifactItem>
                  <groupId>io.github.jhipster.loaded</groupId>
                  <artifactId>agent</artifactId>
                  <version>${jhipsterloaded.version}</version>
                  <type>jar</type>
                  <overWrite>true</overWrite>
                  <outputDirectory>spring_loaded</outputDirectory>
                  <destFileName>springloaded-jhipster.jar</destFileName>
                </artifactItem>
              </artifactItems>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>

</project>
